--- a/group project/style.css
+++ b/group project/style.css
@@ -1,3 +1,14 @@
 .button2{
     float: right; 
 }
+body{
+    padding-left:20%;
+    padding-right:20%;
+    
+    text-align: center;
+    font-size: 15px;
+}
+img{
+    height: 50%;
+    width: 50%;
+}
