--- a/group project/style.css
+++ b/group project/style.css
@@ -1,14 +1,20 @@
 .button2{
     float: right; 
+    
+    margin-left: 500px !important;
 }
 body{
-    padding-left:20%;
-    padding-right:20%;
+    padding-left:25%;
+    padding-right:25%;
     
     text-align: center;
-    font-size: 15px;
+    font-size: 14px;
+    line-height: 1.3;
 }
 img{
     height: 50%;
     width: 50%;
+}
+h2{
+    text-align: left !important;
 }
