--- a/group project/style.css
+++ b/group project/style.css
@@ -18,3 +18,13 @@ img{
 h2{
     text-align: left !important;
 }
+.left{
+    text-align: left !important;
+}
+.button1{
+    margin-right:10px;
+}
+.size{
+    width: 300px;
+    height: 200px;
+}
